# cryptonator

./: .gitignore  Dockerfile  README.md  bitcoin_load.csv  config.yml  lstm_create.ipynb  main.py  mongo_dump_history.py  mongo_load.py  mongo_load_scheduler.py  pyproject.toml
commons/: mapping.py
consts/: __init__.py
db/: __init__.py  conn.py  repository.py
server/: app.py
service/: get_currency.py
