[tool.poetry]
name = "cryptonator"
version = "0.1.0"
description = "Project for study purposes about RNN continuous training and prediction model integration with MNoSQL and Webservice concepts"
authors = ["Gabriel Soares Campanário <gabriel.camp96@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pymongo = "^4.1.1"
PyYAML = "^6.0"
envyaml = "^1.10.211231"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
